terraform/vpc.tf
# -----------------------
# VPC
# -----------------------
resource "aws_vpc" "main" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags                 = { Name = "${var.project_name}-vpc" }
}

data "aws_availability_zones" "available" {}

# Public subnets
resource "aws_subnet" "public_1" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = true
  availability_zone       = data.aws_availability_zones.available.names[0]
  tags                    = { Name = "${var.project_name}-public-subnet-1" }
}

resource "aws_subnet" "public_2" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.2.0/24"
  map_public_ip_on_launch = true
  availability_zone       = data.aws_availability_zones.available.names[1]
  tags                    = { Name = "${var.project_name}-public-subnet-2" }
}

# Backend Private subnets
resource "aws_subnet" "backend-private_subnet_1" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.3.0/24"

  availability_zone = data.aws_availability_zones.available.names[0]
  tags              = { Name = "${var.project_name}-backend-private-subnet-1" }
}

resource "aws_subnet" "backend-private_subnet_2" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.4.0/24"

  availability_zone = data.aws_availability_zones.available.names[1]
  tags              = { Name = "${var.project_name}-backend-private-subnet-2" }
}

# Database Private subnets
resource "aws_subnet" "db-private_subnet_1" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.5.0/24"

  availability_zone = data.aws_availability_zones.available.names[0]
  tags              = { Name = "${var.project_name}-db-private-subnet-1" }
}

resource "aws_subnet" "db-private_subnet_2" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.6.0/24"

  availability_zone = data.aws_availability_zones.available.names[1]
  tags              = { Name = "${var.project_name}-db-private-subnet-2" }
}

# Internet Gateway
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
  tags   = { Name = "${var.project_name}-igw" }
}

#nat gateway
resource "aws_eip" "nat" {

  tags = { Name = "${var.project_name}-nat-eip" }
}

resource "aws_nat_gateway" "nat" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public_1.id
  tags          = { Name = "${var.project_name}-nat-gateway" }
}



# Route Table
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
  tags = { Name = "${var.project_name}-public-rt" }
}

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.nat.id
  }
  tags = { Name = "${var.project_name}-private-rt" }
}

resource "aws_route_table_association" "public_assoc_1" {
  subnet_id      = aws_subnet.public_1.id
  route_table_id = aws_route_table.public.id
}

resource "aws_route_table_association" "public_assoc_2" {
  subnet_id      = aws_subnet.public_2.id
  route_table_id = aws_route_table.public.id
}
# Private Route Table Associations for Backend subnets
resource "aws_route_table_association" "private_assoc_1" {
  subnet_id      = aws_subnet.backend-private_subnet_1.id
  route_table_id = aws_route_table.private.id

}
resource "aws_route_table_association" "private_assoc_2" {
  subnet_id      = aws_subnet.backend-private_subnet_2.id
  route_table_id = aws_route_table.private.id

}
# Private Route Table Associations for Database subnets
resource "aws_route_table_association" "db_private_assoc_1" {
  subnet_id      = aws_subnet.db-private_subnet_1.id
  route_table_id = aws_route_table.private.id
}
resource "aws_route_table_association" "db_private_assoc_2" {
  subnet_id      = aws_subnet.db-private_subnet_2.id
  route_table_id = aws_route_table.private.id
}
